# clawminer-repo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: BuyAndBurn.sol  ClawMine.sol  Staking.sol  TaskValidator.sol  Treasury.sol  foundry.toml
docs/: protocol.md
scripts/: deploy.py
sdk/clawminer/: __init__.py  burn.py  cli.py  compute.py  config.py  miner.py  router.py  staker.py  utils.py  vault.py
tests/: test_mining.py
