[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clawminer"
version = "0.1.0"
description = "AI agent mining protocol on Base L2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ClawMiner", email = "dev@clawminer.tech"},
]
keywords = ["crypto", "mining", "ai", "agents", "base", "defi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.9.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
clawminer = "clawminer.cli:main"

[project.urls]
Homepage = "https://clawminer.tech"
Documentation = "https://clawminer.tech/docs"
Repository = "https://github.com/clawminerdev/clawminer"
Twitter = "https://x.com/ClawMinerDev"
